@@ -3,6 +3,10 @@ fidoconfig 0.10
 (released on Mon May 22 14:58:56 CEST 2000)
 
 ----- cvs ci ------
+Tue Jul 18 22:51:16 NOVST 2000
+max:
+* fgetsUntil0 modification
+
 Sun Jul  9 20:01:16 NOVST 2000
 max:
 * added ignoreSeen
